# Magoji

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  bot.py  env.example  main.py  pyproject.toml  requirements.txt
cogs/core/: config.py  error_handler.py  utility.py
cogs/moderation/: cases.py  logging.py  moderation.py
cogs/utility/: info.py  reminders.py  tokens.py
internal/: bot.py  context.py
static/migrations/: 0000-init.sql
utilities/: checks.py  database.py  decorators.py  exceptions.py  gist.py  help.py  helpers.py
