[tool.poetry]
name = "magoji"
version = "0.1.0"
description = "A shared utility Discord bot"
authors = ["vcokltfre <vcokltfre@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
"discord.py" = "^1.6.0"
pyyaml = "*"
python-dotenv = "*"
aiohttp = "*"
aiodns = "*"
asyncpg = "*"
jishaku = "*"
discord-ext-menus = {git = "https://github.com/Rapptz/discord-ext-menus.git"}

[tool.poetry.dev-dependencies]
pre-commit = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
